# claude-shim

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  mise.toml  package-lock.json  package.json  skills-lock.json
.claude/: .gitignore  claude-shim.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: contributing.md  index.md
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css
docs/guide/: effort.md  installation.md  migration.md  profiles.md  prompt-indicator.md  quick-start.md  resolution.md  statusline.md
src/: cli.rs  init.rs  lib.rs  main.rs  profile.rs  shim.rs
src/cli/: mod.rs  tests.rs
src/init/: mod.rs  tests.rs
src/profile/: dispatch.rs  mod.rs  tests.rs
src/profile/marker/: mod.rs  tests.rs
src/shim/: exec.rs  mod.rs  tests.rs
