[package]
name = "claude-shim"
version = "2026.6.0-alpha.3"
edition = "2024"
description = "Claude Code profile manager. Combat-proven. Automagic."
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
# Strip the symbol table from shipped binaries; the release profile emits no debuginfo anyway.
strip = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
